# HUST-Trusted-Software-Development

./: CMakeLists.txt  README.md
.cache/clangd/index/: gtest-all.cc.EDBD3009EAEDAF87.idx  gtest-assertion-result.cc.C4A07A7F3DF569E6.idx  gtest-assertion-result.h.0D1939AB182434D1.idx  gtest-death-test-internal.h.1AEC0FDC2DA435A1.idx  gtest-death-test.cc.27BF717D6F9C7BCD.idx  gtest-death-test.h.2ACAA72E86769006.idx  gtest-filepath.cc.6C3CDF3DE2DA75D4.idx  gtest-filepath.h.7F6BF038CE8BB595.idx  gtest-internal-inl.h.D840D8823FDAE2DC.idx  gtest-internal.h.906F2AC51E6050E9.idx  gtest-matchers.cc.0FB39AAEB2F1CBFD.idx  gtest-matchers.h.EA21EA9E217F0C82.idx  gtest-message.h.D1C639D90A8F699F.idx  gtest-param-test.h.0430F5C992767CA0.idx  gtest-param-util.h.24DBFB666E54FAAE.idx  gtest-port-arch.h.BC62E1506F7244E7.idx  gtest-port.cc.C7F059A6132D5559.idx  gtest-port.h.7B1F8BB92C63BFEE.idx  gtest-port.h.EC68104331D66F99.idx  gtest-printers.cc.AB87A06347BFA95F.idx  gtest-printers.h.3D1446C7ED5CA3B8.idx  gtest-printers.h.B0E2AF4A9283FDE0.idx  gtest-spi.h.6D6DCB3C29E15AA2.idx  gtest-string.h.A42DF0C2531ED0DA.idx  gtest-test-part.cc.7C49745C7E5967D9.idx  gtest-test-part.h.598CD3FE73089DB6.idx  gtest-type-util.h.E7E8042C4D3AF578.idx  gtest-typed-test.cc.83463F67FD2085EE.idx  gtest.cc.85E7B841F5F0EC44.idx  (+9 more)
include/: Discount.h  DiscountManager.h  PriceCalculator.h
script/: build.bat  build.sh  build_and_run.bat  build_and_run.sh  clean.bat  run.bat  run.sh
src/: CMakeLists.txt  DiscounManager.cpp  Discount.cpp  PriceCalculator.cpp
tests/: CMakeLists.txt  PriceCalculatorTest.cpp
